@@ -54,6 +54,8 @@ EAPI int elm_code_text_newlinenpos(const char *text, unsigned int length, short 
 
 EAPI unsigned int elm_code_text_leading_whitespace_length(const char *text, unsigned int length);
 
+EAPI unsigned int elm_code_text_is_whitespace(const char *text, unsigned int length);
+
 /**
  * @}
  */
