@@ -112,6 +112,21 @@ START_TEST (elm_code_text_leading_whitespace_test)
 }
 END_TEST
 
+START_TEST (elm_code_text_is_whitespace_test)
+{
+   const char *text;
+
+   text = " ";
+   ck_assert_int_eq(1, elm_code_text_is_whitespace(text, strlen(text)));
+
+   text = " \t\t ";
+   ck_assert_int_eq(1, elm_code_text_is_whitespace(text, strlen(text)));
+
+   text = " . ";
+   ck_assert_int_eq(0, elm_code_text_is_whitespace(text, strlen(text)));
+}
+END_TEST
+
 void elm_code_test_text(TCase *tc)
 {
    tcase_add_test(tc, elm_code_text_get_test);
@@ -120,4 +135,5 @@ void elm_code_test_text(TCase *tc)
    tcase_add_test(tc, elm_code_text_strpos_test);
    tcase_add_test(tc, elm_code_text_newline_position_test);
    tcase_add_test(tc, elm_code_text_leading_whitespace_test);
+   tcase_add_test(tc, elm_code_text_is_whitespace_test);
 }
