@@ -1,3 +1,7 @@
+2015-08-27 ajwillia.ms (Andy Williams)
+
+	* Trim lines that are purely whitespace during save
+
 2015-07-17 ajwillia.ms (Andy Williams)
 
 	* Create new files in the selected directory rather than project root
